# dgt_grades

./: LICENSE  README.md  dgt_grade_checker.py  flake.nix  pyproject.toml
dgt_grades/: __init__.py  __main__.py  check_grade.py
